# eventsourcing

./: Cargo.toml  README.md
eventsourcing-derive/: Cargo.toml
eventsourcing-derive/src/: lib.rs
examples/: bank.rs  location.rs
examples/combat/: domain.rs  main.rs
src/: lib.rs  prelude.rs
src/eventstore/: eventstoredb.rs  inmemory.rs  mod.rs  orgeventstore.rs
tests/: cloudevents.rs  eventsmacro.rs  eventsroredb.rs
