[package]
name = "eventsourcing"
version = "0.1.6"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
description = "Event Sourcing for Rust"
documentation = "https://docs.rs/eventsourcing"
repository = "https://github.com/pholactery/eventsourcing"
keywords = ["event", "eventsourcing", "aggregate", "command"]
categories = ["asynchronous","data-structures","rust-patterns","simulation"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/pholactery/eventsourcing"
edition = "2018"

[dependencies]
async-trait = "0.1.57"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.85"
serde_derive = "1.0.144"
serde = "1.0.144"
uuid =  { version = "0.8.1", features = ["v4"], optional = true }
reqwest = { version = "0.11.11", features = ["json", "blocking"], optional = true }
eventstore = { version = "2.1.1" } 
tokio = {version = "1.21.0" }
futures = {version = "0.3"}

[features]
default = ["eventstore","orgeventstore"]
eventstore = [ "uuid"]
orgeventstore = ["reqwest", "eventstore"]


[dev-dependencies]
eventsourcing-derive = { path = "eventsourcing-derive", version = "0.1.4"}

[workspace]
members = ["eventsourcing-derive"]

[[example]]
name = "combat"
required-features = ["orgeventstore"]

[[example]]
name = "bank"
required-features = ["eventstore"]

[[example]]
name = "location"
required-features = ["eventstore"]

[package.metadata.docs.rs]
no-default-features = true
all-features = true
